--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <input type="color" class="color" id="color">
           <hr>
       </form>
-    </div>
+    </div>    
+  </div>
+  <div class="container">
     <div class="figure-container" id="figureContainer">
       <div class="circle" id="figure"></div>
     </div>
