--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="body">
+<body>
 
   <div class="container">
     <div class="constructor">
